--- a/client/app/share/share.html
+++ b/client/app/share/share.html
@@ -11,13 +11,19 @@
 		<hr>
 	</div>
 
-   	<div ng-show="nameInput.length >= 1" class="jumbotron background-blue animated fadeInLeft">
-   		<div>
+   	<div ng-show="nameInput.length >= 1" class="animated fadeInLeft background-blue" style="margin-bottom:30px; min-height:200px;">
+   		<div style="position: absolute; left: 50%; top:50%;">
+   		    <div style="position: relative; left: -50%;">
+   		      <h1>{{nameInput}}</h1>
+   		    </div>
+   		</div>
+   		<img ng-show="coverImageUrl.length > 0" ng-src="{{coverImageUrl}}" style="width:100%;"/>
+   		<div style="position:absolute;">
    		  <i class="fa fa-tags"></i>
    		  <a class="topic" href="">{{selectedTopic}} -</a>
    		  <a style="display:inline;" ng-repeat="tag in tags" ng-href=""><small>{{tag.name+" "}}</small></a> 
    		</div>
-   		<h1 style="text-align: center; margin-top:10px;">{{nameInput}}</h1>
+
    	</div>
    <div class="container">
    	<div class="row">
@@ -26,7 +32,7 @@
    		</div>
 
    		<div ng-show="nameInput.length >= 1" class="col-md-8 animated fadeInLeft">
-   			<div style="margin: 0px;padding: 0px; margin-top:-50px;">
+   			<div class="row" style="margin: 0px;padding: 0px; margin-top:-50px;">
    			    <div class="col-md-3 col-xs-3 well"><i class="fa fa-thumbs-up"></i> โหวต<br>123</div>
    			    <div class="col-md-3 col-xs-3 well"><i class="fa fa-share-alt"></i> แชร์<br>123</div>
    			    <div class="col-md-3 col-xs-3 well"><i class="fa fa-eye"></i> ผู้ชม<br>123</div>
@@ -44,7 +50,7 @@
    					<hr style="width:75%;">
    				</div>
    			</div>
-   			<div class="articleBody" ng-bind-html="textEditorInput" style="word-wrap: break-word; padding:25px; line-height:40px; font-size:25px; letter-spacing: 1px;">
+   			<div ng-show="textEditorInput.length > 0"class="articleBody" ng-bind-html="textEditorInput" style="word-wrap: break-word; padding:25px; line-height:40px; font-size:25px; letter-spacing: 1px;">
    			</div>
    		</div>
 
@@ -76,9 +82,9 @@
 	<div class="shareSteps animated fadeIn" ng-hide="hide[0]">		
 		<h2 class="blue">ขั้นตอนที่ 1: ชื่อบทความ</h2>
 		<div>		
-			<textarea class="form-control" rows="3" ng-model="nameInput" placeholder="ชื่อบทความ.." style="font-size: 1.2em;" popover-placement="bottom" popover="On the Right!" popover-trigger="show">
+			<textarea class="form-control" rows="3" ng-model="nameInput" placeholder="ชื่อบทความ.." style="font-size: 1.2em;">
 			</textarea>
-			<span id="helpBlock" class="help-block text-right"><span ng-class="{true: 'red', false: 'green'}[nameInput.length > 150 || nameInput.length < 3 ]">{{150 - nameInput.length}}</span> อักขระ</span>
+			<span id="helpBlock" class="help-block text-right"><span ng-class="{true: 'red', false: 'green'}[nameInput.length > 84 || nameInput.length < 3 ]">{{84 - nameInput.length}}</span> อักขระ</span>
 			<div ng-if="searchResults.length > 0">
 				<h2 class="text-center">บทความที่คลายกันที่อาจมีคนอื่นเขียนแล้ว</h2>
 				<hr style="width:70%;"/>
@@ -101,19 +107,26 @@
 		</div>
 		<hr>
 	</div>
+
+	<div class="shareSteps animated fadeIn" ng-hide="hide[1]">
+		<h2 class="blue">ขั้นตอนที่ 2: ภาพปกของบทความ</h2>
+		<textarea class="form-control" type="url" ng-model="coverImageUrl" placeholder="Url..." style="font-size: 1.2em;">
+		</textarea>
+		<span id="helpBlock" class="help-block text-right"><span ng-class="{true: 'red', false: 'green'}[coverImageUrl.length > 300 || coverImageUrl.length < 3 ]">{{300 - coverImageUrl.length}}</span> อักขระ</span>
+	</div>
 		
-<div class="shareSteps animated fadeIn" ng-hide="hide[1]">	
-		<h2 class="blue">ขั้นตอนที่ 2: ความสําคัญของบทความนี้</h2>
+<div class="shareSteps animated fadeIn" ng-hide="hide[2]">	
+		<h2 class="blue">ขั้นตอนที่ 3: ความสําคัญของบทความนี้</h2>
 		<div>		
-			<textarea class="form-control" rows="3" ng-model="importanceInput" placeholder="ความสําคัญของบทความ.." style="font-size: 1.2em;" popover-placement="bottom" popover="On the Right!" popover-trigger="show">
+			<textarea class="form-control" rows="3" ng-model="importanceInput" placeholder="ความสําคัญของบทความ.." style="font-size: 1.2em;">
 			</textarea>
 			<span id="helpBlock" class="help-block text-right"><span ng-class="{true: 'red', false: 'green'}[importanceInput.length > 150 || importanceInput.length < 10]">{{150 - importanceInput.length}}</span> อักขระ</span>
 		</div>
 		<hr/>
 </div>
 
-<div class="shareSteps animated fadeIn" ng-hide="hide[2]">	
-		<h2 class="blue">ขั้นตอนที่ 3: เลือกหัวข้อ </h2>
+<div class="shareSteps animated fadeIn" ng-hide="hide[3]">	
+		<h2 class="blue">ขั้นตอนที่ 4: เลือกหัวข้อ </h2>
 		<div class="row">
 		  <div ng-repeat="topic in topics" class="col-sm-6 col-md-4" ng-class="{true: 'blue', false: ''}[topic.active]" ng-click="selectTopic(topic.title);">
 		    <div class="thumbnail" ng-mouseover="animate='animated pulse background-yellow'" ng-mouseleave="animate='background-white'" ng-class="animate">
@@ -130,25 +143,25 @@
 		<hr/>
 </div>
 
-<div class="shareSteps animated fadeIn" ng-hide="hide[3]">	
-		<h2 class="blue">ขั้นตอนที่ 4: เนื้อความ</h2>
+<div class="shareSteps animated fadeIn" ng-hide="hide[4]">	
+		<h2 class="blue">ขั้นตอนที่ 5: เนื้อความ</h2>
 			<div>				
 			<text-angular ta-toolbar="[['p','h1','h2','h3','quote', 'ul', 'ol','undo','redo','justifyLeft', 'justifyCenter','justifyRight', 'insertImage', 'insertLink', 'insertVideo']]" ng-model="textEditorInput"></text-angular>
 			</div>
 		<hr/>
 </div>
 
-<div class="shareSteps animated fadeIn" ng-hide="hide[4]">
-		<h2 class="blue">ขั้นตอนที่ 5: สรุปโดยย่อ</h2>
+<div class="shareSteps animated fadeIn" ng-hide="hide[5]">
+		<h2 class="blue">ขั้นตอนที่ 6: สรุปโดยย่อ</h2>
 		<div>		
-			<textarea class="form-control" rows="3" ng-model="conclusionInput" placeholder="สรุป.." style="font-size: 1.2em;" popover-placement="bottom" popover="On the Right!" popover-trigger="show">
+			<textarea class="form-control" rows="3" ng-model="conclusionInput" placeholder="สรุป.." style="font-size: 1.2em;">
 			</textarea>
 			<span id="helpBlock" class="help-block text-right"><span ng-class="{true: 'red', false: 'green'}[conclusionInput.length > 150 || conclusionInput.length < 10]">{{150 - conclusionInput.length}}</span> อักขระ</span>
 		</div>
 		<hr>
 </div>
 
-<div class="shareSteps animated fadeIn" ng-hide="hide[5]" >	
+<div class="shareSteps animated fadeIn" ng-hide="hide[6]" >	
 		<h2 class="blue">ขั้นตอนสุดท้าย: ใส่แท็ก</h2>
 			<div class="input-group input-group-lg" style="margin: 20px 0;">
 			    <span class="input-group-addon"><i class="fa fa-tags"></i> แท็ก</span>
@@ -167,22 +180,21 @@
 		  </a>
 		</script>
 </div>
+
 </div>
 		<div class="row">
-				<button ng-show="hide[5] === false" class="btn btn-info" ng-click="showPrevious()" style="width:90%; display:block; margin:20px auto 0 auto;">กลับ</button>
+				<button ng-show="hide[6] === false" class="btn btn-info" ng-click="showPrevious()" style="width:90%; display:block; margin:20px auto 0 auto;">กลับ</button>
 				<button ng-show="hide[0] === false" class="btn btn-info" ng-click="showNext()" style="width:90%; display:block; margin:20px auto 0 auto;">ต่อไป</button>
 			
-			<div class="col-md-6" ng-hide="hide[0] === false || hide[5] === false">
+			<div class="col-md-6" ng-hide="hide[0] === false || hide[6] === false">
 				<button class="btn btn-info" ng-click="showPrevious()" style="width:90%; display:block; margin:20px auto 0 auto;">กลับ</button>
 			</div>
-			<div class="col-md-6" ng-hide="hide[0] === false || hide[5] === false">
+			<div class="col-md-6" ng-hide="hide[0] === false || hide[6] === false">
 				<button class="btn btn-info" ng-click="showNext()" style="width:90%; display:block; margin:20px auto 0 auto;">ต่อไป</button>
 			</div>
 		</div>
 		<br>
 
-		<!-- <h2 class="blue">ขั้นตอนที่ 1: ภาพปกของบทความ</h2> -->
-		<!-- <input ng-show="hide[5]===false" class="btn btn-primary btn-lg" style="width:80%; display:block; margin:0 auto;"type="submit" value="แชร์บทความ" ng-click="onSubmit()" /> -->
 		<div ng-show="hide[5]===false">
 			<hr>
 			<a type="submit" style="background: linear-gradient(white, #fff9aa); font-size: 2em; width:100%; display:block; margin:0 auto; color:#428bca;" ng-mouseover="shake='animated bounce'" ng-mouseleave="shake=''" class="btn btn-default" role="button" ng-click="onSubmit()"><i ng-class="shake" class="fa fa-child"></i> โพสต์บทความ</a>
