--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -221,7 +221,7 @@
 		</div>
 	</div>
 
-	<div class="col-md-2">
+	<div class="col-md-2" style="overflow: hidden;">
 		คําถามที่คลายกัน
 		<div ng-include="'components/sidebar/rightSidebar.html'"></div>
 	</div>
