--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,7 @@
     <div ng-include="'components/navbar/navbar.html'"></div>
     <!-- Add your site or application content here -->
       <div>
-          <div class="ng-cloak" ui-view="" autoscroll="true" style="padding-top:51px;"></div>
+          <div class="ng-cloak" ui-view="" autoscroll="true" style="border-top:51px solid #FFF9AA;"></div>
       </div>
 
     <div ng-include="'components/footer/footer.html'"></div>
@@ -106,6 +106,8 @@
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="app/app.js"></script>
           <!-- injector:js -->
+          <script src="app/about/about.controller.js"></script>
+          <script src="app/about/about.js"></script>
           <script src="app/account/account.js"></script>
           <script src="app/account/login/login.controller.js"></script>
           <script src="app/account/profile/profile.controller.js"></script>
@@ -119,6 +121,8 @@
           <script src="app/article/singleArticle/singleArticle.js"></script>
           <script src="app/ask/ask.controller.js"></script>
           <script src="app/ask/ask.js"></script>
+          <script src="app/help/help.controller.js"></script>
+          <script src="app/help/help.js"></script>
           <script src="app/landing/landing.controller.js"></script>
           <script src="app/landing/landing.js"></script>
           <script src="app/main/main.controller.js"></script>
