--- a/client/index.html
+++ b/client/index.html
@@ -129,8 +129,12 @@
           <script src="app/main/main.js"></script>
           <script src="app/question/question.controller.js"></script>
           <script src="app/question/question.js"></script>
+          <script src="app/report/report.controller.js"></script>
+          <script src="app/report/report.js"></script>
           <script src="app/share/share.controller.js"></script>
           <script src="app/share/share.js"></script>
+          <script src="app/suggestion/suggestion.controller.js"></script>
+          <script src="app/suggestion/suggestion.js"></script>
           <script src="app/tag/tag/tag.controller.js"></script>
           <script src="app/tag/tag/tag.js"></script>
           <script src="app/tag/tags/tags.controller.js"></script>
